--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Welcome to your dashboard!</h1>
+            <h1>Welcome to your work station!</h1>
             <div id="userName" class="username">Username</div>
         </header>
         <main>
