--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Welcome to your work station!</h1>
+            <h1>Welcome to your Dashboard!</h1>
             <div id="userName" class="username">Username</div>
         </header>
         <main>
@@ -36,7 +36,7 @@
             </div>
         </main>
         <footer>
-            <p>Powered by Telegram Web Apps</p>
+            <p>Promote Pro Bot</p>
         </footer>
         <script src="app.js"></script>
     </div>
