--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,7 @@
     <div class="container">
         <header>
             <h1>Welcome to your Dashboard!</h1>
-            <div class="profile">
-                <img id="profilePic" class="profile-pic" src ="" alt="Profile Picture">
-                <div id="userName" class="profile-name">Username</div>
+            <div id="userName" class="username">Username</div>
         </header>
         <main>
             <div class="stats">
