--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
                 <div class="task" id="task1">
                     <span>Task 1: Comment on Twitter Post</span>
                     <input type="text" placeholder="Paste link here" id="taskLink1">
-                    <button class="submit-btn" data-task="task1">Submit</button>
-                    <span class="task-status" id="status1">Pending</span>
+                    <button class="complete-btn" data-task="task1">Complete</button>
+                    <span class="task-status" id="status1">*Mandatory</span>
                 </div>
                 <div class="task" id="task2">
                     <span>Task 2</span>
